# CompetenceProject

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Classes.txt  Makefile  Motherload.files  Motherload.includes  Motherload.sln  Structure.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  motherload.vcxproj  motherload.vcxproj.filters
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cmake/: FindGLM.cmake  FindGML.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: Constants.h  Extensions.h  Game.h  MineralType.h  include.h  main.h
include/Components/: Collider.h  Component.h  Inventory.h  Transform.h  Upgrade.h
include/Entities/: Block.h  Camera.h  Entity.h  FuelStore.h  PhysicalEntity.h  PhysicsEntity.h  Player.h  Refinery.h  Store.h  UpgradeStore.h
include/Systems/: DebugSystem.h  InputSystem.h  RenderSystem.h  ResourceManager.h  UISystem.h
include/Systems/Debug/: DebugLine.h
include/Systems/Physics/: Collision.h  PhysicsSystem.h
include/Systems/UI/: UIPanel.h  UISystem.h
libraries/linux/SDL2/include/: SDL_config.h
libraries/linux/SDL2/lib/: libSDL2-2.0.so.0.6.0
libraries/windows/SDL2/lib/x64/: SDL2_ttf.lib
motherload.dir/Debug/motherload.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  motherload.lastbuildstate
src/: CMakeLists.txt  Game.cpp  main.cpp  main.h
src/Components/: Collider.cpp  Inventory.cpp  Transform.cpp  Upgrade.cpp
src/Entities/: Block.cpp  Camera.cpp  FuelStore.cpp  PhysicsEntity.cpp  Player.cpp  Refinery.cpp  Store.cpp  UpgradeStore.cpp
src/Systems/: DebugSystem.cpp  InputSystem.cpp  RenderSystem.cpp  ResourceManager.cpp  UISystem.cpp
src/Systems/Debug/: DebugLine.cpp
src/Systems/Physics/: Collision.cpp  PhysicsSystem.cpp
src/Systems/UI/: UIPanel.cpp
